--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@
         </div>
     </section>
 
+    <section id="projects">
+        <div class="section-content">
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="stayhotel.html">Hotel Booking</a></li>
+              
+                <!-- Add more project links here -->
+            </ul>
+        </div>
+    </section>
+
    
 
     <section id="resume">
